<resources>
    <string name="app_name" translatable="false">Crawler</string>

    <string name="downloads">Downloads</string>
    <string name="wait_download">wait download</string>
    <string name="downloading">downloading</string>
    <string name="already_paused">paused</string>
    <string name="preparing">preparing</string>
    <string name="download_error">error</string>
    <string name="unknown_movie">unknown movie</string>

    <!-- Preference Titles -->
    <string name="player_header">Player settings</string>
    <string name="decoding_title">Decoding settings</string>
    <string name="option_software_decoding">Software decoding</string>
    <string name="option_hardware_decoding">Hardware decoding</string>
    <string name="clear_cache_header">Clear storage cache</string>
    <string name="clear_video_cache">Clear video cache</string>

    <!--Settings -->
    <string name="settings_theme">Themes</string>
    <string name="settings_dark_mode_title">Theme Mode</string>
    <string name="settings_dark_mode_light">Always Light</string>
    <string name="settings_dark_mode_system">Follow System</string>
    <string name="settings_dark_mode_dark">Always Dark</string>

    <string name="settings_background_play">Background play</string>
    <string name="settings_double_speed">Playback speed</string>
    <string name="settings_play_with_browser">Play with browser</string>
    <string name="settings_copy_play_link">Copy play link</string>
    <string name="settings_download_video">Download video</string>
    <string name="settings_dlna_cast">DLNA</string>

    <string name="splash_skip">Skip</string>

    <string-array name="home_category">
        <item>Anime</item>
        <item>Movie</item>
        <item>TV</item>
        <item>Show</item>
        <item>Music</item>
    </string-array>

    <string name="home_search">Search</string>

    <string-array name="home_search_engine">
        <item>Search Engine 1</item>
        <item>Search Engine 2</item>
        <item>Search Engine 3</item>
        <item>Anime</item>
    </string-array>

</resources>
