<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_theme">

        <ListPreference
            app:defaultValue="-1"
            app:entries="@array/dark_theme_entries"
            app:entryValues="@array/dark_theme_values"
            app:key="dark_theme"
            app:title="@string/settings_dark_mode_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/player_header">

        <ListPreference
            app:defaultValue="0"
            app:entries="@array/decoding_entries"
            app:entryValues="@array/decoding_values"
            app:key="decoding_settings"
            app:title="@string/decoding_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/clear_cache_header">

        <Preference
            app:key="clear_video_cache"
            app:title="@string/clear_video_cache" />

    </PreferenceCategory>

</PreferenceScreen>